# project_water_quality_minicurso

./: README.md  aplication.dockerfile  app.py  pyproject.toml  requirements.txt
model/: clf_logisticregression.joblib
notebooks/: water_quality_completo.ipynb
